<resources>
    <string name="app_name">ControlRemoto</string>

    <string name="option_device">Dispositivos</string>
    <string name="option_add_device">Añadir dispositivo</string>
    <string name="option_remenber_device">Recordar este dispositivo</string>
    <string name="option_play_computer">Video streaming</string>

    <string name="title_new_device">Nuevo dispositivo</string>

    <string name="text_name_device">Nombre del dispositivo:</string>
    <string name="text_name_device_default">No posee nombre</string>
    <string name="text_ip_device">Direccion ip del dispositivo:</string>
    <string name="text_ip_device_default">000.000.0.0</string>
    <string name="text_port_device">Puerto de conexion:</string>
    <string name="text_pass_device">Contraseña del dispositivo:</string>
    <string name="text_pass_confirmed_device_default">Repita la contraseña:</string>
    <string name="text_save_device">Guardar informacion del dispositivo</string>
    <string name="text_conect_device">Conectar con el dispositivo</string>

    <string name="ip_address">IP:</string>
    <string name="port">Puerto:</string>

    <string name="ip_address_default">127.0.0.1</string>
    <string name="port_default">11000</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="conectar">Conectar</string>
    <string name="desconectar">Desconectar</string>

    <string name="base_de_datos">DBControlRemoto</string>

    <string name="titulo_seleccionar_dispositivo">¿Desea seleccionar el dispositvo?</string>
    <string name="titulo_deseleccionar_dispositivo">¿Desea desconectar el dispositvo?</string>
    <string name="modificar_dispositivo">Modificar dispositivo:</string>

    <string name="see_password">Ver clave</string>

    <string name="delete_device">Eliminar</string>
    <string name="modifire_device">Modificar</string>

    <string name="delete_disconect">Eliminar y desconectar</string>

    <string name="ruler_mouse">Mouse-Pad (Poder Nigga)</string>
</resources>
