<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_collapseMode="none"
    tools:context="lemus.com.bast_software.controlremoto.DeviceFragment"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorInformationHeader"
        android:maxHeight="@dimen/height_device_connected"
        android:minHeight="@dimen/height_device_connected"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/iv_icon_device_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@mipmap/ic_device_state_round" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".7"
                    android:columnCount="2"
                    android:rowCount="2"
                    android:transitionGroup="false">

                    <TextView
                        android:id="@+id/tv_ip_adress"
                        style="@style/TextViewGridElement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:gravity="right"
                        android:text="@string/ip_address"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_ip_adress_val"
                        style="@style/TextViewGridElement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/ip_address_default" />

                    <TextView
                        android:id="@+id/tv_port"
                        style="@style/TextViewGridElement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_port_val"
                        style="@style/TextViewGridElement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/port_default" />
                </GridLayout>

                <ImageView
                    android:id="@+id/iv_favority_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.3"
                    app:srcCompat="@android:drawable/btn_star_big_off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_recordar_dispositivo"
                    style="@style/CheckBoxAloneCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/option_remenber_device" />
            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/layout_bottom_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_bottom_menu"
            android:maxHeight="@dimen/height_bottom_menu"
            />
    </TableRow>

</TableLayout>
